--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
     
-  flutter_tts: "0.2.4"
-
-  # The following adds the Cupertino Icons font to your application.
+  flutter_tts: "0.8.6"
+  intl: ^0.15.8
+# The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
